[metadata]
name = simdev
version = 0.0.1

[options]
package_dir =
    =src
packages = find:
zip_safe = true
include_package_data = true
install_requires =
    pytz
    BAC0
    bacpypes
    netifaces
    iptools
    starlette
    uvicorn
    click
    click-extra

[options.packages.find]
where = src

[options.extras_require]
all =
    pytest
    black

[options.entry_points]
console_scripts = 
    sd = simdev.cli.main:main

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]
